--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -14,7 +14,6 @@
         <!--Calculator Brain View Controller-->
         <scene sceneID="n86-Oy-5ac">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fJe-Uc-JnB" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Y29-pl-6sY" customClass="CalculatorBrainViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Qbm-En-DxY"/>
@@ -30,7 +29,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="xh1-rv-JWt">
                                         <rect key="frame" x="0.0" y="0.0" width="728" height="166.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCg-KI-nxz">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCg-KI-nxz" userLabel="AnswerLabel">
                                                 <rect key="frame" x="0.0" y="0.0" width="728" height="166.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -304,9 +303,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="NP6-LD-JWN"/>
                     <connections>
-                        <outlet property="sumLabel" destination="cCg-KI-nxz" id="eMj-3P-4wW"/>
+                        <outlet property="answerLabel" destination="cCg-KI-nxz" id="rAM-oJ-6BE"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fJe-Uc-JnB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1172" y="22.03898050974513"/>
         </scene>
